# depredict

./: .gitignore  Anchor.toml  CONTRIBUTING.md  README.md  local_mint.json  package-lock.json  package.json  txtx.yml
deploy/: readme.md  v2.3.5.Dockerfile
deploy/scripts/: README.md  close-config.ts  create-market-creator.ts  init.ts  load_paths.ts  read-config.ts  verify-market-creator.ts
depredict-docs/: README.md  package.json  vocs.config.ts
depredict-docs/docs/: footer.tsx  styles.css
depredict-docs/docs/pages/: architecture.mdx  dev-env.mdx  getting-started.mdx  index.mdx  market-creator.mdx  market-types.mdx  oracles.mdx  overview.mdx  roadmap.mdx  sdk-api.mdx  sdk-example.mdx  sdk-whats-new.mdx
programs/depredict/: Cargo.toml
programs/depredict/src/: constants.rs  constraints.rs  errors.rs  events.rs  helpers.rs  lib.rs
programs/depredict/src/instructions/: config.rs  market.rs  market_creator.rs  mod.rs  position.rs  trade.rs
programs/depredict/src/state/: config.rs  market.rs  market_creator.rs  mod.rs  trade.rs
programs/shortx-market-contract/: Cargo.toml
programs/shortx-market-contract/src/: constants.rs  constraints.rs  errors.rs  events.rs  lib.rs
runbooks/: README.md
runbooks/deployment/: main.tx  subgraphs.localnet.tx
scripts/: check_deployment_costs.sh  deploy.sh
sdk/: README.md  package-lock.json  package.json  program-keypair.json  tsconfig.cjs.json  tsconfig.json  tsup.config.ts
sdk/src/: config.ts  index.ts  marketCreator.ts  position.ts  trade.ts
tests/: README.md  close-config.ts  config.ts  constants.ts  create-merkle-tree.ts  create-usdc-mint.ts  docker-compose.yml  helpers.ts  market-id.json  mpl_functions.ts  run-all-tests.ts  setup-crossbar.sh  setup-localnet.sh  setup-market-creator.ts  setup-markets.ts  shortx-contract.ts  stop-crossbar.sh  stop-validator.sh  test-create-collection.ts  test-verify-market-creator.ts
tests/keys/: generate-keys.sh
tests/market/: close-market.ts  create-market.ts  market-creator.ts  resolve-market.ts  update-market.ts
tests/trade/: batch-open-claim.ts  claim-order.ts  create-order.ts  mint-existing-position.ts  order-flow.ts  payout-nft.ts  payout-order.ts  test-pages.ts
tests/user/: create-subuser-trade.ts  create-user-trade.ts  create-user.ts
(+28 files in other folders)
