[package]
name = "depredict"
version = "0.6.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "depredict"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata", "associated_token"] }
switchboard-on-demand = "0.5.1"
mpl-core = { version = "0.10.1" }
mpl-bubblegum = "2.1.1"
solana-security-txt = "1.1.1"
# spl-account-compression = { version = "1.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
litesvm = "0.7.0"
